--- a/client/admin/src/mealorder/shell/app-shell.html
+++ b/client/admin/src/mealorder/shell/app-shell.html
@@ -27,6 +27,13 @@
     </template>
     <script>
         {
+            /**
+             * `<app-shell>` component inject
+             * `<meal-order-admin-app>` and `<meal-order-dialog-container>` components.
+             *
+             * @customElement
+             * @polymer
+             */
             class AppShell extends Polymer.Element {
                 static get is() {
                     return 'app-shell';
