--- a/client/admin/src/mealorder/shell/app-shell.html
+++ b/client/admin/src/mealorder/shell/app-shell.html
@@ -22,6 +22,11 @@
 <link rel="import" href="redux-store.html">
 
 <dom-module id="app-shell">
+    <style>
+        :host {
+            background-color: red;
+        }
+    </style>
     <template>
         <meal-order-dialog-container></meal-order-dialog-container>
         <meal-order-admin-app></meal-order-admin-app>
