--- a/client/admin/src/mealorder/meal-order-admin-app.html
+++ b/client/admin/src/mealorder/meal-order-admin-app.html
@@ -33,8 +33,8 @@
 <link rel="import" href="../../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="./components/meal-order-vendor-list.html">
 <link rel="import" href="./shell/redux-store.html">
+<link rel="import" href="./components/meal-order-vendor-list.html">
 
 <dom-module id="meal-order-admin-app">
     <template>
@@ -52,6 +52,10 @@
                 --app-drawer-content-container: {
                     background-color: var(--paper-grey-100);
                 }
+            }
+
+            app-header-layout {
+                background-color: var(--paper-grey-50);
             }
 
             app-header {
