--- a/client/admin/src/mealorder/meal-order-admin-app.html
+++ b/client/admin/src/mealorder/meal-order-admin-app.html
@@ -42,6 +42,7 @@
             app-drawer-layout {
                 color: var(--google-grey-700);
                 background-color: var(--paper-grey-50);
+                width: 100%;
             }
 
             app-drawer-layout:not([narrow]) [drawer-toggle] {
@@ -51,10 +52,12 @@
             app-drawer {
                 --app-drawer-content-container: {
                     background-color: var(--paper-grey-100);
+                    width: 100%;
                 }
             }
 
             app-header-layout {
+                width: 100%;
                 background-color: var(--paper-grey-50);
             }
 
@@ -79,6 +82,11 @@
 
             #app-toolbar {
                 background-color: var(--paper-grey-700);
+            }
+
+            .routing-title {
+                color: var(--paper-grey-50);
+                margin-left: 5%;
             }
 
             .iron-container {
@@ -158,7 +166,9 @@
                             <iron-icon class="app-toolbar-content"
                                        icon="icons:menu"
                                        drawer-toggle></iron-icon>
-                            <div class="routing-title"></div>
+                            <div class="routing-title" drawer-toggle>
+                                [[_getRoutingTitle(routeData.page)]]
+                            </div>
                         </div>
                     </app-toolbar>
                 </app-header>
@@ -202,6 +212,17 @@
                          * Used for routing.
                          */
                         routeData: {}
+                    }
+                }
+
+                _getRoutingTitle(routeDate) {
+                    switch (routeDate) {
+                        case "vendor": {
+                            return "Поставщики";
+                        }
+                        default: {
+                            return "";
+                        }
                     }
                 }
             }
