--- a/client/user/src/mealorder/meal-order-client-app.html
+++ b/client/user/src/mealorder/meal-order-client-app.html
@@ -134,7 +134,7 @@
                          * @property {Number} month
                          * @property {Number} year
                          *
-                         * @typedef {Array} Categories array contains the category name and dishes
+                         * @typedef {Array} Categories contains the category name and dishes
                          * @typedef {Array} Dishes array contains the dish title, price, quantity
                          * @property {String} title
                          * @property {String} price
