--- a/client/user/src/mealorder/meal-order-toolbar.html
+++ b/client/user/src/mealorder/meal-order-toolbar.html
@@ -119,7 +119,7 @@
              * @customElement
              * @polymer
              */
-            class MealOrderToolbar extends (Polymer.Element) {
+            class MealOrderToolbar extends Polymer.Element {
                 static get is() {
                     return 'meal-order-toolbar';
                 }
