--- a/client/user/src/mealorder/menu/meal-order-menu-container.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-container.html
@@ -102,7 +102,7 @@
              * @polymer
              * @appliesMixin MealOrderApp.ReduxMixin
              */
-            class MealOrderMenuContainer extends (Polymer.Element) {
+            class MealOrderMenuContainer extends Polymer.Element {
                 static get is() {
                     return 'meal-order-menu-container';
                 }
