--- a/client/admin/src/mealorder/meal-order-admin-app.html
+++ b/client/admin/src/mealorder/meal-order-admin-app.html
@@ -35,6 +35,7 @@
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="./shell/redux-store.html">
 <link rel="import" href="./components/meal-order-vendor-list.html">
+<link rel="import" href="./components/admin-vendor-menus.html">
 
 <dom-module id="meal-order-admin-app">
     <template>
@@ -178,8 +179,8 @@
                         fallback-selection="view404"
                         role="main">
                     <meal-order-vendor-list data-page="vendor"></meal-order-vendor-list>
-                    <!--<admin-vendor-menus data-page="menu"></admin-vendor-menus>
-                    <monthly-spending data-page="costs"></monthly-spending>
+                    <admin-vendor-menus data-page="menu"></admin-vendor-menus>
+                    <!--<monthly-spending data-page="costs"></monthly-spending>
                     <vendor-orders data-page="order"></vendor-orders>-->
                 </iron-pages>
             </app-header-layout>
