Set paper-style colors for the dialog

--- a/client/admin/src/mealorder/dialog/admin-vendor-dialog.html
+++ b/client/admin/src/mealorder/dialog/admin-vendor-dialog.html
@@ -61,6 +61,7 @@
 
             paper-input {
                 margin-top: 5%;
+                --paper-input-container-focus-color: var(--google-grey-700);
             }
 
             gold-phone-input {
@@ -88,8 +89,8 @@
             }
 
             .confirm {
-                background-color: #0085d3;
-                color: white;
+                background-color: var(--google-blue-500);
+                color: var(--google-green-100);
             }
 
             @media only screen and (max-width: 1024px) {
