--- a/client/admin/src/mealorder/shell/actions/admin-actions.html
+++ b/client/admin/src/mealorder/shell/actions/admin-actions.html
@@ -22,6 +22,7 @@
         OPEN_VENDOR_DIALOG: 'OPEN_VENDOR_DIALOG',
         CLOSE_VENDOR_DIALOG: 'CLOSE_VENDOR_DIALOG',
         ADD_VENDOR: 'ADD_VENDOR',
+        UPDATE_VENDOR: 'UPDATE_VENDOR',
         REMOVE_VENDOR: 'REMOVE_VENDOR',
     }
 </script>
