--- a/client/admin/src/mealorder/shell/reducers/reducers.html
+++ b/client/admin/src/mealorder/shell/reducers/reducers.html
@@ -55,6 +55,9 @@
                 case MealOrderAdminApp.AdminActions.ADD_VENDOR: {
                     return state;
                 }
+                case MealOrderAdminApp.AdminActions.UPDATE_VENDOR: {
+                    return state;
+                }
                 case MealOrderAdminApp.AdminActions.REMOVE_VENDOR: {
                     return state;
                 }
