Add a dialog to add a menu from the vendor

--- a/client/admin/src/mealorder/meal-order-admin-app.html
+++ b/client/admin/src/mealorder/meal-order-admin-app.html
@@ -218,6 +218,9 @@
                         case "vendor": {
                             return "Поставщики";
                         }
+                        case "menu": {
+                            return "Меню";
+                        }
                         default: {
                             return "";
                         }
