--- a/client/admin/src/mealorder/shell/actions/admin-actions.html
+++ b/client/admin/src/mealorder/shell/actions/admin-actions.html
@@ -23,5 +23,8 @@
         CLOSE_VENDOR_DIALOG: 'CLOSE_VENDOR_DIALOG',
         ADD_VENDOR: 'ADD_VENDOR',
         REMOVE_VENDOR: 'REMOVE_VENDOR',
+        OPEN_MENU: 'OPEN_MENU',
+        CLOSE_MENU: 'CLOSE_MENU',
+        ADD_MENU: 'ADD_MENU',
     }
 </script>
