--- a/client/admin/src/mealorder/dialog/admin-vendor-dialog.html
+++ b/client/admin/src/mealorder/dialog/admin-vendor-dialog.html
@@ -18,7 +18,6 @@
   ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   -->
 <link rel="import" href="../../../bower_components/polymer/polymer-element.html">
-<link rel="import" href="../../../bower_components/polymer/lib/elements/dom-repeat.html">
 <link rel="import" href="../../../bower_components/polymer/lib/elements/dom-if.html">
 <link rel="import" href="../../../bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="../../../bower_components/paper-input/paper-input.html">
@@ -201,7 +200,8 @@
                                 </paper-button>
                             </template>
                             <template is="dom-if" if="[[_isUpdate()]]">
-                                <paper-button class="confirm" on-click="_updateVendor">Обновить
+                                <paper-button id="ds" class="confirm" on-click="_updateVendor">
+                                    Обновить
                                 </paper-button>
                             </template>
                         </div>
