Add filtering for the menu

--- a/client/admin/src/mealorder/shell/actions/admin-actions.html
+++ b/client/admin/src/mealorder/shell/actions/admin-actions.html
@@ -26,5 +26,7 @@
         OPEN_MENU: 'OPEN_MENU',
         CLOSE_MENU: 'CLOSE_MENU',
         ADD_MENU: 'ADD_MENU',
+        GET_ACTIVE_MENU: 'GET_ACTIVE_MENU',
+        GET_ALL_MENU: 'GET_ALL_MENU'
     }
 </script>
