--- a/client/admin/src/mealorder/shell/reducers/reducers.html
+++ b/client/admin/src/mealorder/shell/reducers/reducers.html
@@ -19,6 +19,141 @@
   -->
 <script>
     {
+        const activeMenu = [
+            {
+                name: 'Пюре',
+                dateStart: new Date("2018-03-05"),
+                dateEnd: new Date("2018-03-25"),
+                status: "Активно",
+                categories: [{
+                    categoryName: 'Первое блюдо', dishes: [
+                        {title: 'Суп гречневый', price: 35},
+                        {title: 'Солянка', price: 40},
+                        {title: 'Суп гороховый', price: 140},
+                        {title: 'Уха', price: 35},
+                        {title: 'Суп-пюре грибной', price: 40}]
+                }
+                    , {
+                        categoryName: 'Второе блюдо', dishes: [
+                            {title: 'Утиные крылышки', price: 40},
+                            {title: 'Куриные крылышки', price: 45}]
+                    }
+                ]
+            },
+            {
+                name: 'Позитив',
+                dateStart: new Date("2018-03-05"),
+                dateEnd: new Date("2018-03-25"),
+                status: "Активно",
+                categories: [{
+                    categoryName: 'Первое блюдо', dishes: [
+                        {title: 'Суп сырный', price: 35},
+                        {title: 'Суп с лапшой', price: 40},
+                        {title: 'Борщ красный', price: 40},
+                        {title: 'Борщ зеленый', price: 35}]
+                }
+                    , {
+                        categoryName: 'Второе блюдо', dishes: [
+                            {title: 'Стейк из лосося', price: 40},
+                            {title: 'Стейк из говядины', price: 45}]
+                    },
+                    {
+                        categoryName: 'Напитки', dishes: [
+                            {title: 'Лимонад', price: 40}]
+                    }
+                ]
+            }
+        ];
+
+        const allMenu = [
+            {
+                name: 'Пюре',
+                dateStart: new Date("2018-03-05"),
+                dateEnd: new Date("2018-03-25"),
+                status: "Активно",
+                categories: [{
+                    categoryName: 'Первое блюдо', dishes: [
+                        {title: 'Суп гречневый', price: 35},
+                        {title: 'Солянка', price: 40},
+                        {title: 'Суп гороховый', price: 140},
+                        {title: 'Уха', price: 35},
+                        {title: 'Суп-пюре грибной', price: 40}]
+                }
+                    , {
+                        categoryName: 'Второе блюдо', dishes: [
+                            {title: 'Утиные крылышки', price: 40},
+                            {title: 'Куриные крылышки', price: 45}]
+                    }
+                ]
+            },
+            {
+                name: 'Позитив',
+                dateStart: new Date("2018-03-05"),
+                dateEnd: new Date("2018-03-25"),
+                status: "Активно",
+                categories: [{
+                    categoryName: 'Первое блюдо', dishes: [
+                        {title: 'Суп сырный', price: 35},
+                        {title: 'Суп с лапшой', price: 40},
+                        {title: 'Борщ красный', price: 40},
+                        {title: 'Борщ зеленый', price: 35}]
+                }
+                    , {
+                        categoryName: 'Второе блюдо', dishes: [
+                            {title: 'Стейк из лосося', price: 40},
+                            {title: 'Стейк из говядины', price: 45}]
+                    },
+                    {
+                        categoryName: 'Напитки', dishes: [
+                            {title: 'Лимонад', price: 40}]
+                    }
+                ]
+            },
+            {
+                name: 'Пюре',
+                dateStart: new Date("2018-02-05"),
+                dateEnd: new Date("2018-02-25"),
+                status: "В архиве",
+                categories: [{
+                    categoryName: 'Первое блюдо', dishes: [
+                        {title: 'Суп гречневый', price: 35},
+                        {title: 'Солянка', price: 40},
+                        {title: 'Суп гороховый', price: 140},
+                        {title: 'Уха', price: 35},
+                        {title: 'Суп-пюре грибной', price: 40}]
+                }
+                    , {
+                        categoryName: 'Второе блюдо', dishes: [
+                            {title: 'Утиные крылышки', price: 40},
+                            {title: 'Куриные крылышки', price: 45}]
+                    }
+                ]
+            },
+            {
+                name: 'Позитив',
+                dateStart: new Date("2018-02-05"),
+                dateEnd: new Date("2018-02-25"),
+                status: "В архиве",
+                categories: [{
+                    categoryName: 'Первое блюдо', dishes: [
+                        {title: 'Суп сырный', price: 35},
+                        {title: 'Суп с лапшой', price: 40},
+                        {title: 'Борщ красный', price: 40},
+                        {title: 'Борщ зеленый', price: 35}]
+                }
+                    , {
+                        categoryName: 'Второе блюдо', dishes: [
+                            {title: 'Стейк из лосося', price: 40},
+                            {title: 'Стейк из говядины', price: 45}]
+                    },
+                    {
+                        categoryName: 'Напитки', dishes: [
+                            {title: 'Лимонад', price: 40}]
+                    }
+                ]
+            }
+        ];
+
         MealOrderAdminApp.initialState = {
             vendors: [
                 {
@@ -33,52 +168,9 @@
                     deadline: '10:00'
                 },
             ],
-            menu: [
-                {
-                    name: 'Пюре',
-                    dateStart: new Date("2018-03-05"),
-                    dateEnd: new Date("2018-03-25"),
-                    status: "Активно",
-                    categories: [{
-                        categoryName: 'Первое блюдо', dishes: [
-                            {title: 'Суп гречневый', price: 35},
-                            {title: 'Солянка', price: 40},
-                            {title: 'Суп гороховый', price: 140},
-                            {title: 'Уха', price: 35},
-                            {title: 'Суп-пюре грибной', price: 40}]
-                    }
-                        , {
-                            categoryName: 'Второе блюдо', dishes: [
-                                {title: 'Утиные крылышки', price: 40},
-                                {title: 'Куриные крылышки', price: 45}]
-                        }
-                    ]
-                },
-                {
-                    name: 'Позитив',
-                    dateStart: new Date("2018-03-05"),
-                    dateEnd: new Date("2018-03-25"),
-                    status: "Активно",
-                    categories: [{
-                        categoryName: 'Первое блюдо', dishes: [
-                            {title: 'Суп сырный', price: 35},
-                            {title: 'Суп с лапшой', price: 40},
-                            {title: 'Борщ красный', price: 40},
-                            {title: 'Борщ зеленый', price: 35}]
-                    }
-                        , {
-                            categoryName: 'Второе блюдо', dishes: [
-                                {title: 'Стейк из лосося', price: 40},
-                                {title: 'Стейк из говядины', price: 45}]
-                        },
-                        {
-                            categoryName: 'Напитки', dishes: [
-                                {title: 'Лимонад', price: 40}]
-                        }
-                    ]
-                }
-            ]
+            currentMenu: activeMenu,
         };
+
 
         MealOrderAdminApp.reducer = (state, action) => {
             if (!state) {
@@ -114,6 +206,18 @@
                 }
                 case MealOrderAdminApp.AdminActions.REMOVE_VENDOR: {
                     return state;
+                }
+                case MealOrderAdminApp.AdminActions.GET_ACTIVE_MENU: {
+                    return Object.assign({}, state, {
+                            currentMenu: activeMenu
+                        }
+                    );
+                }
+                case MealOrderAdminApp.AdminActions.GET_ALL_MENU: {
+                    return Object.assign({}, state, {
+                            currentMenu: allMenu
+                        }
+                    );
                 }
                 default :
                     return state;
