--- a/client/admin/src/mealorder/dialog/admin-menu-dialog.html
+++ b/client/admin/src/mealorder/dialog/admin-menu-dialog.html
@@ -21,6 +21,7 @@
 <link rel="import" href="../../../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../../../bower_components/paper-listbox/paper-listbox.html">
 <link rel="import" href="../../../bower_components/neon-animation/web-animations.html">
+<link rel="import" href="../../../bower_components/iron-form/iron-form.html">
 
 <dom-module id="admin-menu-dialog">
     <template>
